# zavaquin-robot

./: README.md
install/: local_setup.sh  setup.sh
log/: latest_build
src/robot_description/: CMakeLists.txt
src/robot_description/launch/: gazebo.launch.py
src/robot_description/urdf/: ZavaQuin.urdf
src/zavaquin_description/launch/: gazebo.launch.py
zavaquin_bringup/: CMakeLists.txt  package.xml
zavaquin_bringup/config/: controllers.yaml
zavaquin_bringup/launch/: zavaquin_bringup_launch.py
zavaquin_cartographer/: CMakeLists.txt  package.xml
zavaquin_cartographer/launch/: cartographer.launch.py
zavaquin_cartographer/rviz/: zavaquin_cartographer.rviz
zavaquin_description/: CMakeLists.txt  package.xml
zavaquin_description/launch/: description_launch.py  display.launch.py  gazebo.launch.py  robot_state_publisher.py
zavaquin_description/meshes/: camera_link.STL  caster_wheel_link.STL  laser_link.STL  wheel_left_link.STL  wheel_right_link.STL
zavaquin_description/urdf/: camera.xacro  gazebo_control.xacro  imu.xacro  lidar.xacro  materials.xacro  ros2_control.xacro  zavaquin.urdf.xacro
zavaquin_description/worlds/: empty.world
zavaquin_gazebo/: CMakeLists.txt  package.xml
zavaquin_gazebo/launch/: gazebo_launch.py
zavaquin_gazebo/urdf/: zavaquin_gz.xacro
zavaquin_gazebo/urdf/include/: zavaquin_materials.xacro
zavaquin_navigation/: CMakeLists.txt  package.xml
zavaquin_navigation/launch/: navigation.launch.py
zavaquin_navigation/map/: ramel.pgm  ramel.yaml
zavaquin_navigation/param/: zavaquin.yaml
(+26 files in other folders)
