<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zavaquin_gazebo</name>
  <version>0.0.0</version>
  <description>ZavaQuin gazebo package</description>
  <maintainer email="jonzavil@espol.edu.ec">Jonathan Z</maintainer>
  <maintainer email="cepaquin@espol.edu.ec">Cesar Q</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros2_control</depend> 
  <depend>gazebo_ros_pkgs</depend> 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>